# persona-counsel

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/persona_counsel/: __init__.py  cli.py  council.py  goals.py  logic.py  model_factory.py  models.py  renderer.py
tests/: conftest.py  test_cli.py  test_council.py  test_goals.py  test_model_factory.py  test_models.py  test_renderer.py
